cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(DETECT_TRACK)
find_package(PCL 1.3 REQUIRED COMPONENTS common io visualization segmentation)
find_package(catkin REQUIRED)
find_package(rosbag REQUIRED)
include_directories(${PCL_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS} ${rosbag_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(detect_n_track main.cpp)
target_link_libraries(detect_n_track ${PCL_LIBRARIES} ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} ${catkin_LIBRARIES} ${rosbag_LIBRARIES})
MESSAGE( STATUS "catkin_LIBRARIES: " ${catkin_LIBRARIES})
MESSAGE( STATUS "rosbag_LIBRARIES: " ${rosbag_LIBRARIES})
